--- a/inside.html
+++ b/inside.html
@@ -369,6 +369,8 @@
 			var script = document.createElement('script');
 			script.src = "inside.asm.js";
 			script.onload = function() {
+				var somethingg = window.location.href.slice(0, -11);
+				window.alert(somethingg+'data.pck');
 				setTimeout(function() {
 					var memoryInitializer = 'inside.mem';
 					if (typeof Module.locateFile === 'function') {
@@ -384,9 +386,7 @@
 					var script = document.createElement('script');
 					script.src = "inside.js";
 					script.onload = function() {
-						
-						var somethingg = window.location.href.slice(0, -11);
-						window.alert(somethingg);
+						// error
 						Module.FS.createPreloadedFile(somethingg+'data.pck', null, 'data.pck', true, true, null, null, false, true);
 					};
 					document.body.appendChild(script);
