Revert "Update inside.html"
This reverts commit 8664e34297504837b00c3b8a472b526c1c5ad800.

--- a/inside.html
+++ b/inside.html
@@ -387,7 +387,7 @@
 					script.src = "inside.js";
 					script.onload = function() {
 						// error
-						Module.FS.createPreloadedFile(somethingg+'data.pck', null, 'data.pck', true, true, null, null, false, true,false,false);
+						Module.FS.createPreloadedFile(somethingg+'data.pck', null, 'data.pck', true, true, null, null, false, true);
 					};
 					document.body.appendChild(script);
 				}, 1); // delaying even 1ms is enough to allow compilation memory to be reclaimed
