--- a/index.html
+++ b/index.html
@@ -84,15 +84,17 @@
 				El juego publicado en GameJolt.
 			</a>
 			<br><br>
-			<p> Una imagen del juego: </p>
-			<img src="imagenes\juego\2.png" height="50%" width="50%">
-			
-
+			<p> Imagenes del juego: </p>
+			<img src="imagenes\juego\1.png" height="50%" width="50%">
+			<!--<img src="imagenes\juego\2.png" height="50%" width="50%">-->
+			<img src="imagenes\juego\3.png" height="50%" width="50%">
 
 
 		</div>
 		<div id="muestra_3" class="muestra">
-			<p>Mi tercer proyecto de muestra es esta misma pagina. Utiliza javascript, html y css. Todo lo que se ve en ella fue un trabajo hecho por mi.<br>
+			<p>Mi tercer proyecto de muestra es esta misma pagina. La pagina esta hospedada en <a href="https://www.netlify.com"> https://www.netlify.com </a>. Utiliza javascript, html y css. Todo lo que se ve en ella fue un trabajo hecho por mi.
+			
+			<br>
 			</p>
 			<p>Para finalizar me gustaria comunicar al lector que lo que busco con estas 3 demostraciones de 
 			proyectos no es destacar el conocimiento de las tecnologias utilizadas, sino demostrar una 
