--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Historia</title>
+	<title>Demostracion de proyectos</title>
 	<link rel="stylesheet" href="style.css"/>
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 	<script src="Jquery/jquery-1.6.3.min.js"></script>
@@ -18,8 +18,8 @@
 <body>
 <div class="header">
 
-	<h1>Presentacion de proyectos</h1>
-	<h2> Tomas Garcilazo</h2>
+	<h1> Presentacion de proyectos </h1>
+	<h2> Tomas Garcilazo </h2>
 
 </div>
 <div id="pre-body">
@@ -38,16 +38,16 @@ A la izquierda puede ver la lista de proyectos.
 		<li><button  class="index_link" value="3">proyecto 3</button></li>
 		-->
 
-		<li><a class="index_link" href="#muestra_1">proyecto 1</a></li>
-		<li><a class="index_link" href="#muestra_2">proyecto 2</a></li>
-		<li><a class="index_link" href="#muestra_3">proyecto 3</a></li>
+		<li><a class="index_link" href="#muestra_1">1 Programa de escritorio</a></li>
+		<li><a class="index_link" href="#muestra_2">2 Videojuego</a></li>
+		<li><a class="index_link" href="#muestra_3">3 Pagina web</a></li>
 	</div>
 
 
 
 	<div id ="conteiner_muestras">
 		<div id="muestra_1" class="muestra">
-			<h class="titulo_proyecto"> Proyecto 1 </h>
+			<h class="titulo_proyecto">1 Programa de escritorio</h>
 			<p>Este programa sirve para crear libros interactivos.
 			Los libros interactivos son exportados por el programa en formato de pagina html.
 			Estan estilizados con css y tienen un comando de javascript para agregarle mas
@@ -101,7 +101,7 @@ A la izquierda puede ver la lista de proyectos.
 
 		</div>
 		<div id="muestra_2" class="muestra">
-			<h class="titulo_proyecto"> Proyecto 2 </h>
+			<h class="titulo_proyecto"> 2 Videojuego </h>
 			<p>Mi segundo proyecto de muestra es un juego de desplazamiento horizontal. A diferencia
 			del proyecto anterior fue hecho usando un editor de texto, para este tube que aprender a usar un programa.
 			Esta hecho con el motor de juegos Godot usando el lenguaje GDscript.</p>
@@ -121,7 +121,7 @@ A la izquierda puede ver la lista de proyectos.
 
 		</div>
 		<div id="muestra_3" class="muestra">
-			<h class="titulo_proyecto"> Proyecto 3 </h>
+			<h class="titulo_proyecto"> 3 Pagina web </h>
 			<p>Mi tercer proyecto de muestra es esta misma pagina. 
 			La pagina esta hospedada en <a href="https://www.netlify.com"> https://www.netlify.com </a>. 
 			Utiliza javascript, html y css. Todo lo que se ve en ella fue un trabajo hecho por mi.
