--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ A la izquierda puede ver la lista de proyectos.
 <div class="body">
 	<div id="proyectos">
 
-		<h3>Proyectos</h3>
+		<h3>Proyectos:</h3>
 		<!--
 		<li><button  class="index_link" value="1">proyecto 1</button></li>
 		<li><button  class="index_link" value="2">proyecto 2</button></li>
@@ -126,21 +126,22 @@ A la izquierda puede ver la lista de proyectos.
 			</p>
 		</div>
 			<br>
-
-		<div id="finalizar">
-			<h2> Para finalizar: </h2>
-			<p>Me gustaria comunicar al lector que lo que busco con estas 3 demostraciones de 
-			proyectos no es destacar el conocimiento de las tecnologias utilizadas, sino demostrar una 
-			variedad de cualidades personales como:
-			
-			</p>
-			<p>capacidad adaptativa: son 3 proyectos muy diferentes entre si y emplean diferentes tecnologias.
-			Siempre estoy dispuesto a aprender y/o capacitarme.
-			<br>
-			compromiso: Hacer toda esta demostracion requiere un considerable tiempo y bastante dedicacion.
-			<br>
-			Proactividad: Puedo no tener experiencia laboral en el campo, pero no me quede esperando e hize todo esto para aumentar mis chances.
-		</div>
+		<div id="muestra_4" class="muestra">
+			<div id="finalizar">
+				<h2> Para finalizar: </h2>
+				<p>Me gustaria comunicar al lector que lo que busco con estas 3 demostraciones de 
+				proyectos no es destacar el conocimiento de las tecnologias utilizadas, sino demostrar una 
+				variedad de cualidades personales como:
+				
+				</p>
+				<p>capacidad adaptativa: son 3 proyectos muy diferentes entre si y emplean diferentes tecnologias.
+				Siempre estoy dispuesto a aprender y/o capacitarme.
+				<br>
+				compromiso: Hacer toda esta demostracion requiere un considerable tiempo y bastante dedicacion.
+				<br>
+				Proactividad: Puedo no tener experiencia laboral en el campo, pero no me quede esperando e hize todo esto para aumentar mis chances.
+			</div>
+	</p></div>
 		<br><br>
 		<br><br>
 		<br><br>
