--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Demostracion de proyectos</title>
+	<title>Demostración de proyectos</title>
 	<link rel="stylesheet" href="style.css"/>
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 	<script src="Jquery/jquery-1.6.3.min.js"></script>
@@ -23,22 +23,24 @@
 
 </div>
 <div id="pre-body">
-Hola, bienvenido a mi presentacion de proyectos. <br>
+Bienvenido a mi presentacion de proyectos. <br>
 A la izquierda puede ver la lista de proyectos.
 </div>
 <div class="body">
 	<div id="proyectos">
 
-		<h3>Proyectos:</h3>
+		<h3>Proyectos:<br>(clic para mostrar)</h3>
+		
+		<li><button  class="index_link" value="1">1 Programa de escritorio</button></li>
+		<li><button  class="index_link" value="2">2 Videojuego</button></li>
+		<li><button  class="index_link" value="3">3 Pagina web</button></li>
+		
 		<!--
-		<li><button  class="index_link" value="1">proyecto 1</button></li>
-		<li><button  class="index_link" value="2">proyecto 2</button></li>
-		<li><button  class="index_link" value="3">proyecto 3</button></li>
-		-->
-
 		<li><a class="index_link" href="#muestra_1">1 Programa de escritorio</a></li>
 		<li><a class="index_link" href="#muestra_2">2 Videojuego</a></li>
 		<li><a class="index_link" href="#muestra_3">3 Pagina web</a></li>
+		<li><a class="index_link"> 4 Proximamente...</a></li>
+		-->
 	</div>
 
 
@@ -67,27 +69,26 @@ A la izquierda puede ver la lista de proyectos.
 			</p>
 
 			<!--<h3>A continuacion se explican las funciones de manera general del programa, es algo extensa asi que si no tiene tiempo le recomendaria continuar viendo los otros proyectos. </h3>-->
-			<h3>BLABLALBA</h3>
-
 			<p><!--Para poder usar el programa primero se necesita abrir un proyecto, pero antes de eso veamos por arriba las frunciones que tiene.--></p>
 
 			<p><!--Este es el menu de edicion. Si se usa el boton "editar" se abrira el texto de esa pagina en el editor por defecto del usuario.--></p>
 
-			<img src="imagenes\python\menu_edicion.png" alt="menu de edicion"><br>
-			<p><!--Esta es la interfaz para cambiar de pagina--></p>
+			<!--<img src="imagenes\python\menu_edicion.png" alt="menu de edicion"><br>
+			<p>Esta es la interfaz para cambiar de pagina</p>
 			<img src="imagenes\python\cambiar_de_escena.png" alt=""><br>
-			<p><!--esta es la barra para seleccionar la pagina siguiente. Como la primera pagina solo tiene una opcion la barra aparece desactivada.--></p>
-			<img src="imagenes\python\barra_desactivada.png" alt=""><br>
+			<p>esta es la barra para seleccionar la pagina siguiente. Como la primera pagina solo tiene una opcion la barra aparece desactivada.</p>
+			<img src="imagenes\python\barra_desactivada.png" alt=""><br>-->
 
-			<p><!--ahora vamos a el menu--></p>
+			<!--<p>ahora vamos a el menu</p>
 			<img src="imagenes\python\barra_de_menu.png" alt="barra de menu"><br>
-			<p><!--Como no tenemos un proyecto guardado abrimos uno nuevo.--></p>
+			<p>Como no tenemos un proyecto guardado abrimos uno nuevo.</p>
 			<img src="imagenes\python\opcion_nuevo.png" alt=""><br>
-			<p><!--elegimos una carpeta (preferentemente vacia)--></p>
-			<img src="imagenes\python\crear_nuevo.png" alt="" height="75%" width="75%"><br>
-			<p><!--Si vamos a la carpeta podemos ver los archivos generados. Para trabajar con un proyecto ya existente, en lugar de usar el boton "nuevo" se usaria el boton "abrir" y seleccionar el archivo "inicio.dat"--></p>
-			<img src="imagenes\python\archivos_generados.png" alt=""><br>
-
+			<p>elegimos una carpeta (preferentemente vacia)</p>
+			<img src="imagenes\python\crear_nuevo.png" alt="" height="75%" width="75%"><br>-->
+			<p>Cuando se crea un proyecto nuevo, se generan los siguientes archivos.
+			si se quiere abrir el proyecto solo se necesita seleccionar el archivo "inicio.dat"</p>
+			<img src="imagenes\python\archivos_generados.png" alt="" height="25%" width="25%"><br>
+			<!--
 			<p></p>
 			<img src="imagenes\python\escena_actual.png" alt=""><br>
 			<p></p>
@@ -95,6 +96,9 @@ A la izquierda puede ver la lista de proyectos.
 			<p></p>
 			<img src="imagenes\python\opcion_exportar.png" alt=""><br>
 			<p></p>
+			-->
+			<p>Y cuando se exporta se generan estos. Se puede leer el libro sin conexion a internet
+			simplemente abriendo el archivo "iniciar".</p>
 			<img src="imagenes\python\archivos_exportar.png" alt=""><br>
 
 		</div>
@@ -124,9 +128,7 @@ A la izquierda puede ver la lista de proyectos.
 			La pagina esta hospedada en <a href="https://www.netlify.com"> https://www.netlify.com </a>. 
 			Utiliza javascript, html y css. Todo lo que se ve en ella fue un trabajo hecho por mi.
 			</p>
-		</div>
 			<br>
-		<div id="muestra_4" class="muestra">
 			<div id="finalizar">
 				<h2> Para finalizar: </h2>
 				<p>Me gustaria comunicar al lector que lo que busco con estas 3 demostraciones de 
@@ -155,7 +157,7 @@ A la izquierda puede ver la lista de proyectos.
 	footer
 </div>
 </body>
-<!--
+
 <script type="text/javascript">
 	$(".index_link").click(function(){
 		var a = $(this).val();
@@ -167,5 +169,4 @@ A la izquierda puede ver la lista de proyectos.
 		$(".muestra").hide();
 		$("#muestra_1").show();
 </script>
--->
 </html>
