arregladas algunas faltas de ortofrafia

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <body>
 <div class="header">
 
-	<h1> Presentacion de proyectos </h1>
+	<h1> Presentación de proyectos </h1>
 	<h2> Tomas Garcilazo </h2>
 
 </div>
 <div id="pre-body">
-Bienvenido a mi presentacion de proyectos. <br>
+Bienvenido a mi presentación de proyectos. <br>
 A la izquierda puede ver la lista de proyectos.
 </div>
 <div class="body">
@@ -31,9 +31,10 @@ A la izquierda puede ver la lista de proyectos.
 
 		<h3>Proyectos:<br>(clic para mostrar)</h3>
 		
-		<li><button  class="index_link" value="1">1 Programa de escritorio</button></li>
-		<li><button  class="index_link" value="2">2 Videojuego</button></li>
-		<li><button  class="index_link" value="3">3 Pagina web</button></li>
+		<li><button class="index_link" value="1">1 Programa de escritorio</button></li>
+		<li><button class="index_link" value="2">2 Videojuego</button></li>
+		<li><button class="index_link" value="3">3 Pagina web</button></li>
+		<li><button class="index_link" value=""> Más proximamente...</a></li>
 		
 		<!--
 		<li><a class="index_link" href="#muestra_1">1 Programa de escritorio</a></li>
@@ -139,7 +140,7 @@ A la izquierda puede ver la lista de proyectos.
 				<p>capacidad adaptativa: son 3 proyectos muy diferentes entre si y emplean diferentes tecnologias.
 				Siempre estoy dispuesto a aprender y/o capacitarme.
 				<br>
-				compromiso: Hacer toda esta demostracion requiere un considerable tiempo y bastante dedicacion.
+				compromiso: Hacer toda esta demostración requiere un considerable tiempo y bastante dedicación.
 				<br>
 				Proactividad: Puedo no tener experiencia laboral en el campo, pero no me quede esperando e hize todo esto para aumentar mis chances.
 			</div>
