--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ A la izquierda puede ver la lista de proyectos.
 		
 		<li><button class="index_link" value="1">1 Programa de escritorio</button></li>
 		<li><button class="index_link" value="2">2 Videojuego</button></li>
-		<li><button class="index_link" value="3">3 página web</button></li>
+		<li><button class="index_link" value="3">3 Página web</button></li>
 		<li><button class="index_link" value=""> Más próximamente...</a></li>
 		
 		<!--
@@ -122,7 +122,7 @@ A la izquierda puede ver la lista de proyectos.
 
 		</div>
 		<div id="muestra_3" class="muestra">
-			<h class="titulo_proyecto"> 3 página web </h>
+			<h class="titulo_proyecto"> 3 Página web </h>
 			<p>Mi tercer proyecto de muestra es esta misma página que está viendo. 
 			La página esta hospedada en <a href="https://www.netlify.com"> https://www.netlify.com</a>. 
 			Utiliza javascript, html y css. Todo lo que se ve en ella fue un trabajo hecho por mí.
