agregado el contacto

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ A la izquierda puede ver la lista de proyectos.
 		<li><button class="index_link" value="2">2 Videojuego</button></li>
 		<li><button class="index_link" value="3">3 Página web</button></li>
 		<li><button class="index_link" value=""> Más próximamente...</a></li>
+
+		<h3><a href="#footer">Contacto</a></h3>
 		
 		<!--
 		<li><a class="index_link" href="#muestra_1">1 Programa de escritorio</a></li>
@@ -62,7 +64,7 @@ A la izquierda puede ver la lista de proyectos.
 			<p>Los libros exportados pueden verse sin accesos a internet. Esta es una imagen de una página de ejemplo.</p>
 			<img src="imagenes\python\pagina_exportada.png" alt="" height="60%" width="60%"><br>
 			<p>
-			Como el libro es exportado en formato html, también puede publicarse como una página web 
+			Como el libro es exportado en formato html puede publicarse como una página web 
 			estática sin necesidad de agregarle nada más. Puede ver un ejemplo haciendo 
 			clic <a href="libro_ejemplo/index.html">aquí</a>.
 			</p>
@@ -159,8 +161,19 @@ A la izquierda puede ver la lista de proyectos.
 	</div>
 </div>
 
-<div class="footer">
-	footer
+<div id ="footer">
+	<h1> Contacto </h1>
+
+	<p>
+	email: TomasGarcilazo@outlook.com.ar
+	<br>
+	Teléfono: 21319166
+	<br>
+	Celular: 11 2796-3416
+	<br>
+	<a href="https://www.linkedin.com/in/tomas-garcilazo-b00585191/">Clic para ir a mi perfil de Linkedin</a>
+	</p>
+
 </div>
 </body>
 
